// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConversationViewer Visual Snapshots > handles role-specific styling and theming > conversation-viewer-roles 1`] = `
<div
  aria-label="Conversation viewer: Role Test"
  class="relative 
    bg-white text-black
    
    transition-all duration-300 ease-in-out
    focus:outline-none"
  role="dialog"
  tabindex="0"
>
  <header
    class="
        sticky top-0 z-10 
        bg-gray-50 border-gray-200 
        border-b px-6 py-4 flex items-center justify-between
      "
  >
    <div
      class="flex items-center gap-4"
    >
      <h1
        class="text-xl font-semibold truncate"
      >
        Role Test
      </h1>
      <span
        class="text-sm opacity-70"
      >
        3
         message
        s
      </span>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <button
        aria-label="Switch to dark theme"
        class="
        p-2 rounded-md transition-all duration-200
        hover:bg-gray-200 text-gray-600 hover:text-black
        focus:outline-none focus:ring-2 focus:ring-offset-2 
        focus:ring-gray-400
      "
        title="Switch to dark theme"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <button
        aria-label="Enter fullscreen"
        class="
              p-2 rounded-md transition-colors
              hover:bg-gray-200 text-gray-600 hover:text-black
            "
        title="Enter fullscreen (Ctrl+F)"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </header>
  <main
    class="flex-1 overflow-y-auto"
  >
    <div
      class="max-w-4xl mx-auto px-6 py-8 space-y-6"
    >
      <div
        aria-label="system message"
        class="
        flex gap-4 group
        pt-0 
        
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-purple-700 bg-purple-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              system
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              System message
            </p>
          </div>
        </div>
      </div>
      <div
        aria-label="user message"
        class="
        flex gap-4 group
         
        
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-blue-700 bg-blue-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              user
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              User message
            </p>
          </div>
        </div>
      </div>
      <div
        aria-label="assistant message"
        class="
        flex gap-4 group
         
        pb-0
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-green-700 bg-green-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              assistant
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              Assistant message
            </p>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`ConversationViewer Visual Snapshots > renders conversation viewer with messages > conversation-viewer-basic 1`] = `
<div
  aria-label="Conversation viewer: Test Conversation"
  class="relative 
    bg-white text-black
    
    transition-all duration-300 ease-in-out
    focus:outline-none"
  role="dialog"
  tabindex="0"
>
  <header
    class="
        sticky top-0 z-10 
        bg-gray-50 border-gray-200 
        border-b px-6 py-4 flex items-center justify-between
      "
  >
    <div
      class="flex items-center gap-4"
    >
      <h1
        class="text-xl font-semibold truncate"
      >
        Test Conversation
      </h1>
      <span
        class="text-sm opacity-70"
      >
        3
         message
        s
      </span>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <button
        aria-label="Switch to dark theme"
        class="
        p-2 rounded-md transition-all duration-200
        hover:bg-gray-200 text-gray-600 hover:text-black
        focus:outline-none focus:ring-2 focus:ring-offset-2 
        focus:ring-gray-400
      "
        title="Switch to dark theme"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <button
        aria-label="Enter fullscreen"
        class="
              p-2 rounded-md transition-colors
              hover:bg-gray-200 text-gray-600 hover:text-black
            "
        title="Enter fullscreen (Ctrl+F)"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </header>
  <main
    class="flex-1 overflow-y-auto"
  >
    <div
      class="max-w-4xl mx-auto px-6 py-8 space-y-6"
    >
      <div
        aria-label="system message"
        class="
        flex gap-4 group
        pt-0 
        
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-purple-700 bg-purple-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              system
            </span>
            <span
              class="text-xs opacity-60 font-mono"
            >
              1/1/2024, 10:00:00 AM
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              You are a helpful AI assistant.
            </p>
          </div>
        </div>
      </div>
      <div
        aria-label="user message"
        class="
        flex gap-4 group
         
        
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-blue-700 bg-blue-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              user
            </span>
            <span
              class="text-xs opacity-60 font-mono"
            >
              1/1/2024, 10:01:00 AM
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              Hello! How are you doing today?
            </p>
          </div>
        </div>
      </div>
      <div
        aria-label="assistant message"
        class="
        flex gap-4 group
         
        pb-0
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-green-700 bg-green-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              assistant
            </span>
            <span
              class="text-xs opacity-60 font-mono"
            >
              1/1/2024, 10:01:30 AM
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              I am doing well, thank you for asking! How can I help you today?
            </p>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`ConversationViewer Visual Snapshots > renders empty conversation viewer > conversation-viewer-empty 1`] = `
<div
  aria-label="Conversation viewer: Empty Conversation"
  class="relative 
    bg-white text-black
    
    transition-all duration-300 ease-in-out
    focus:outline-none"
  role="dialog"
  tabindex="0"
>
  <header
    class="
        sticky top-0 z-10 
        bg-gray-50 border-gray-200 
        border-b px-6 py-4 flex items-center justify-between
      "
  >
    <div
      class="flex items-center gap-4"
    >
      <h1
        class="text-xl font-semibold truncate"
      >
        Empty Conversation
      </h1>
      <span
        class="text-sm opacity-70"
      >
        0
         message
        s
      </span>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <button
        aria-label="Switch to dark theme"
        class="
        p-2 rounded-md transition-all duration-200
        hover:bg-gray-200 text-gray-600 hover:text-black
        focus:outline-none focus:ring-2 focus:ring-offset-2 
        focus:ring-gray-400
      "
        title="Switch to dark theme"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <button
        aria-label="Enter fullscreen"
        class="
              p-2 rounded-md transition-colors
              hover:bg-gray-200 text-gray-600 hover:text-black
            "
        title="Enter fullscreen (Ctrl+F)"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </header>
  <main
    class="flex-1 overflow-y-auto"
  >
    <div
      class="max-w-4xl mx-auto px-6 py-8 space-y-6"
    >
      <div
        class="text-center py-12 opacity-60"
      >
        <p>
          No messages to display
        </p>
      </div>
    </div>
  </main>
</div>
`;

exports[`ConversationViewer Visual Snapshots > renders with close handler and accessibility features > conversation-viewer-with-close 1`] = `
<div
  aria-label="Conversation viewer: Closeable Conversation"
  class="relative 
    bg-white text-black
    
    transition-all duration-300 ease-in-out
    focus:outline-none"
  role="dialog"
  tabindex="0"
>
  <header
    class="
        sticky top-0 z-10 
        bg-gray-50 border-gray-200 
        border-b px-6 py-4 flex items-center justify-between
      "
  >
    <div
      class="flex items-center gap-4"
    >
      <h1
        class="text-xl font-semibold truncate"
      >
        Closeable Conversation
      </h1>
      <span
        class="text-sm opacity-70"
      >
        3
         message
        s
      </span>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <button
        aria-label="Switch to dark theme"
        class="
        p-2 rounded-md transition-all duration-200
        hover:bg-gray-200 text-gray-600 hover:text-black
        focus:outline-none focus:ring-2 focus:ring-offset-2 
        focus:ring-gray-400
      "
        title="Switch to dark theme"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <button
        aria-label="Enter fullscreen"
        class="
              p-2 rounded-md transition-colors
              hover:bg-gray-200 text-gray-600 hover:text-black
            "
        title="Enter fullscreen (Ctrl+F)"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <button
        aria-label="Close viewer"
        class="
                p-2 rounded-md transition-colors
                hover:bg-gray-200 text-gray-600 hover:text-black
              "
        title="Close (Esc)"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </header>
  <main
    class="flex-1 overflow-y-auto"
  >
    <div
      class="max-w-4xl mx-auto px-6 py-8 space-y-6"
    >
      <div
        aria-label="system message"
        class="
        flex gap-4 group
        pt-0 
        
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-purple-700 bg-purple-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              system
            </span>
            <span
              class="text-xs opacity-60 font-mono"
            >
              1/1/2024, 10:00:00 AM
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              You are a helpful AI assistant.
            </p>
          </div>
        </div>
      </div>
      <div
        aria-label="user message"
        class="
        flex gap-4 group
         
        
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-blue-700 bg-blue-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              user
            </span>
            <span
              class="text-xs opacity-60 font-mono"
            >
              1/1/2024, 10:01:00 AM
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              Hello! How are you doing today?
            </p>
          </div>
        </div>
      </div>
      <div
        aria-label="assistant message"
        class="
        flex gap-4 group
         
        pb-0
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-green-700 bg-green-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              assistant
            </span>
            <span
              class="text-xs opacity-60 font-mono"
            >
              1/1/2024, 10:01:30 AM
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              I am doing well, thank you for asking! How can I help you today?
            </p>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`ConversationViewer Visual Snapshots > renders with custom className and maintains styling > conversation-viewer-custom 1`] = `
<div
  aria-label="Conversation viewer: Custom Styled"
  class="relative 
    bg-white text-black
    border-2 border-red-500 custom-viewer
    transition-all duration-300 ease-in-out
    focus:outline-none"
  role="dialog"
  tabindex="0"
>
  <header
    class="
        sticky top-0 z-10 
        bg-gray-50 border-gray-200 
        border-b px-6 py-4 flex items-center justify-between
      "
  >
    <div
      class="flex items-center gap-4"
    >
      <h1
        class="text-xl font-semibold truncate"
      >
        Custom Styled
      </h1>
      <span
        class="text-sm opacity-70"
      >
        3
         message
        s
      </span>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <button
        aria-label="Switch to dark theme"
        class="
        p-2 rounded-md transition-all duration-200
        hover:bg-gray-200 text-gray-600 hover:text-black
        focus:outline-none focus:ring-2 focus:ring-offset-2 
        focus:ring-gray-400
      "
        title="Switch to dark theme"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <button
        aria-label="Enter fullscreen"
        class="
              p-2 rounded-md transition-colors
              hover:bg-gray-200 text-gray-600 hover:text-black
            "
        title="Enter fullscreen (Ctrl+F)"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </header>
  <main
    class="flex-1 overflow-y-auto"
  >
    <div
      class="max-w-4xl mx-auto px-6 py-8 space-y-6"
    >
      <div
        aria-label="system message"
        class="
        flex gap-4 group
        pt-0 
        
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-purple-700 bg-purple-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              system
            </span>
            <span
              class="text-xs opacity-60 font-mono"
            >
              1/1/2024, 10:00:00 AM
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              You are a helpful AI assistant.
            </p>
          </div>
        </div>
      </div>
      <div
        aria-label="user message"
        class="
        flex gap-4 group
         
        
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-blue-700 bg-blue-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              user
            </span>
            <span
              class="text-xs opacity-60 font-mono"
            >
              1/1/2024, 10:01:00 AM
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              Hello! How are you doing today?
            </p>
          </div>
        </div>
      </div>
      <div
        aria-label="assistant message"
        class="
        flex gap-4 group
         
        pb-0
      "
        role="article"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="
          w-10 h-10 rounded-full flex items-center justify-center
          text-green-700 bg-green-50
          transition-all duration-200
          group-hover:scale-105
        "
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-baseline gap-3 mb-2"
          >
            <span
              class="font-medium capitalize text-sm"
            >
              assistant
            </span>
            <span
              class="text-xs opacity-60 font-mono"
            >
              1/1/2024, 10:01:30 AM
            </span>
          </div>
          <div
            class="
          prose prose-sm max-w-none
          
        "
          >
            <p
              class="mb-3 leading-relaxed"
            >
              I am doing well, thank you for asking! How can I help you today?
            </p>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
